--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,379 +1,508 @@
 /*@import url(bootstrap.min.css);*/
 /*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,500,700,900);*/
-.textshadow (dark, @alpha) {
-	text-shadow: 0px 1px 1px rgba(0, 0, 0, @alpha);
+.textshadow (dark, @alpha)
+{
+    text-shadow: 0 1px 1px rgba(0, 0, 0, @alpha);
 }
-.textshadow (light, @alpha) {
-	text-shadow: 0px 1px 1px rgba(255, 255, 255, @alpha);
+.textshadow (light, @alpha)
+{
+    text-shadow: 0 1px 1px rgba(255, 255, 255, @alpha);
 }
-.textshadowtop (dark, @alpha) {
-	text-shadow: 0px -1px 1px rgba(0, 0, 0, @alpha);
+.textshadowtop (dark, @alpha)
+{
+    text-shadow: 0 -1px 1px rgba(0, 0, 0, @alpha);
 }
-.textshadowtop (light, @alpha) {
-	text-shadow: 0px -1px 1px rgba(255, 255, 255, @alpha);
+.textshadowtop (light, @alpha)
+{
+    text-shadow: 0 -1px 1px rgba(255, 255, 255, @alpha);
 }
-.bgeffect{
-	-webkit-transition: background 0.3s ease;
-	-moz-transition: background 0.3s ease;
-	-ms-transition: background 0.3s ease;
-	-o-transition: background 0.3s ease;
-	transition: background 0.3s ease;
+.bgeffect
+{
+    -webkit-transition: background .3s ease;
+       -moz-transition: background .3s ease;
+        -ms-transition: background .3s ease;
+         -o-transition: background .3s ease;
+            transition: background .3s ease;
 }
-.noeffect{
-	-webkit-transition: all 0 ease;
-	-moz-transition: all 0 ease;
-	-ms-transition: all 0 ease;
-	-o-transition: all 0 ease;
-	transition: all 0 ease;
+.noeffect
+{
+    -webkit-transition: all 0 ease;
+       -moz-transition: all 0 ease;
+        -ms-transition: all 0 ease;
+         -o-transition: all 0 ease;
+            transition: all 0 ease;
 }
-.effect (@text){
-	-webkit-transition: @text;
-	-moz-transition: @text;
-	-ms-transition: @text;
-	-o-transition: @text;
-	transition: @text;
+.effect (@text)
+{
+    -webkit-transition: @text;
+       -moz-transition: @text;
+        -ms-transition: @text;
+         -o-transition: @text;
+            transition: @text;
 }
-.gradient (@color1, @color2, @default){
-	background: @default;
-	background: -moz-linear-gradient(top,  @color1 0%, @color2 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@color1), color-stop(100%,@color2));
-	background: -webkit-linear-gradient(top,  @color1 0%,@color2 100%);
-	background: -o-linear-gradient(top,  @color1 0%,@color2 100%);
-	background: -ms-linear-gradient(top,  @color1 0%,@color2 100%);
-	background: linear-gradient(to bottom,  @color1 0%,@color2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="@{color1}", endColorstr="@{color2}",GradientType=0 );
+.gradient (@color1, @color2, @default)
+{
+    background: @default;
+    background:    -moz-linear-gradient(top,  @color1 0%, @color2 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@color1), color-stop(100%,@color2));
+    background: -webkit-linear-gradient(top,  @color1 0%,@color2 100%);
+    background:      -o-linear-gradient(top,  @color1 0%,@color2 100%);
+    background:     -ms-linear-gradient(top,  @color1 0%,@color2 100%);
+    background:         linear-gradient(to bottom,  @color1 0%,@color2 100%);
+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="@{color1}", endColorstr="@{color2}",GradientType=0 );
 }
-.gradient (@color1, @color2){
-	background: @color1;
-	background: -moz-linear-gradient(top,  @color1 0%, @color2 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@color1), color-stop(100%,@color2));
-	background: -webkit-linear-gradient(top,  @color1 0%,@color2 100%);
-	background: -o-linear-gradient(top,  @color1 0%,@color2 100%);
-	background: -ms-linear-gradient(top,  @color1 0%,@color2 100%);
-	background: linear-gradient(to bottom,  @color1 0%,@color2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="@{color1}", endColorstr="@{color2}",GradientType=0 );
+.gradient (@color1, @color2)
+{
+    background: @color1;
+    background:    -moz-linear-gradient(top,  @color1 0%, @color2 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@color1), color-stop(100%,@color2));
+    background: -webkit-linear-gradient(top,  @color1 0%,@color2 100%);
+    background:      -o-linear-gradient(top,  @color1 0%,@color2 100%);
+    background:     -ms-linear-gradient(top,  @color1 0%,@color2 100%);
+    background:         linear-gradient(to bottom,  @color1 0%,@color2 100%);
+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="@{color1}", endColorstr="@{color2}",GradientType=0 );
 }
-.gradientdark (@color1, @color2, @p){
-	@icolor1: darken(@color1, @p);
-	@icolor2: darken(@color2, @p);
-	.gradient (darken(@color1, @p), darken(@color2, @p));
+.gradientdark (@color1, @color2, @p)
+{
+    @icolor1: darken(@color1, @p);
+    @icolor2: darken(@color2, @p);
+    .gradient (darken(@color1, @p), darken(@color2, @p));
 }
-.innertop (dark, @alpha){
-	-webkit-box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, @alpha);
-	box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, @alpha);
+.innertop (dark, @alpha)
+{
+    -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, @alpha);
+            box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, @alpha);
 }
-.innertop (light, @alpha){
-	-webkit-box-shadow: inset 0px 1px 1px 0px rgba(255, 255, 255, @alpha);
-	box-shadow: inset 0px 1px 1px 0px rgba(255, 255, 255, @alpha);
+.innertop (light, @alpha)
+{
+    -webkit-box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, @alpha);
+            box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, @alpha);
 }
 @w: 30px;
 @blue: #7dc0d8;
-body{
-	font-size: 160%;
-	padding-top: 52px;
-}
-.red{
-	color: red;
-}
-.right{
-	float: right;
-}
-#content-list{
-	.list{
-		border: 1px solid #eee;
-		border-radius: 5px;
-		padding: 20px;
-	}
-	hr{
-		margin-right: 0 20px;
-	}
-	h5{
-		font-size: 1.1em;
-		font-weight: normal;
-		margin-bottom: 0;
-	}
-	.text-left{
-		font-size: 150%;
-		display: inline-block;
-		margin: 2px 0;
-		font-weight: bold;
-		position: relative;
-		top: 2px;
-	}
-}
-.helper{
+body
+{
+    font-size: 160%;
 
+    padding-top: 52px;
 }
-.comment{
+.red
+{
+    color: red;
+}
+.right
+{
+    float: right;
+}
+#content-list
+{
+    .list
+    {
+        padding: 20px;
 
-}
-.topic{
-	margin-bottom: 0;
-	h4{
-		font-weight: bold;
-		margin-top: 0;
-	}
-	.col-xs-2{
-		margin-top: 4px;
-		.btn{
-		}
-	}
-}
-.create-btn{
-	font-weight: bold;
-	span{
-		position: relative;
-		top: 2px;
-		padding-right: 5px;
-	}
-}
-.topic-line{
-	margin-top: 13px;
-}
-.pagination{
-	margin: 0;
-}
-#sidebar{
-	.replies{
-		font-size: 90%;
-		h4{
-			color: #428bca;
-			font-size: 120%;
-			font-weight: bold;
-		}
-	}
-}
-.info{
-	.name{
-		display: inline-block;
-		font-size: 90%;
-		background-color: #f7f8f8;
-		padding: 1px 8px;
-		position: relative;
-		top: 1px;
-	}
-	.date{
-		display: inline-block;
-		background-color: #f7f8f8;
-		borderx: 1px solid #eef0f0;
-		border-radius: 3px;
-		font-size: 80%;
-		padding: 3px 5px;
-		margin: 0;
-	}
-	.tag{
-		display: inline-block;
-		background-color: #eff9fa;
-		border: 1px solid #daeaec;
-		border-radius: 3px;
-		font-size: 80%;
-		padding: 2px 5px;
-		margin: 0;
-		&:hover{
-			background-color: #e4f7f9;
-			text-decoration: none;
-		}
-		&.yellow{
-			background-color: #FAF9EF;
-			border-color: #ECEADA;
-			color: #C09F35;
-			&:hover{
-				background-color: #FAF7D7;
-				color: darken(#C09F35,5%);
-			}
-		}
-		&.red{
-			background-color: #FDF4F4;
-			border-color: #FAE2E2;
-			color: #D3747C;
-			&:hover{
-				background-color: #FFECEC;
-				color: #C03540;
-			}
-		}
-		&.orange{
-			background-color: #FFF8F0;
-			border-color: #F5EDE4;
-			color: #DD9450;
-			&:hover{
-				background-color: #FFF4E7;
-				color: #C03540;
-			}
-		}
-	}
-}
+        border: 1px solid #eee;
+        border-radius: 5px;
+    }
+    hr
+    {
+        margin-right: 0 20px;
+    }
+    h5
+    {
+        font-size: 1.1em;
+        font-weight: normal;
 
-.thread{
-	border: 1px solid #eee;
-	background-color: #f9fcfe;
-	border-radius: 5px;
-	padding: 20px;
-}
-.reply,.box{
-	border: 1px solid #eee;
-	border-radius: 5px;
-	padding: 20px;
-	margin: 30px 0;
-}
-.box{
-	margin-top: 0;
-}
-.post {
-	padding: 0 30px;
-	border-bottom: 5px #bdc3c7 solid;
-}
-.vote{
-	font-size: 120%;
-	font-weight: bold;
-	padding: 0 7px;
-	line-height: 22px;
-}
-.current-score{
-	display: inline-block;
-	padding: 3px 8px;
-	position: relative;
-	top: 3px;
-	line-height: 33px;
-	font-size: 180%;
-}
-.inner-reply-btn,.reply-btn{
-	padding: 2px 10px 3px 10px;
-	margin-right: 5px;
-}
-.reply-form,.topic-reply{
-	background-color: #C7E5EC;
-	padding: 10px;
-	margin-top: 20px;
-	border-radius: 5px;
-	h5{
-		font-weight: normal;
-		font-size: 1.3em;
-	}
-}
-.topic-reply{
-	background-color: #cfcfcf;
-}
-.reply-form-original{
-	display: none;
+        margin-bottom: 0;
+    }
+    .text-left
+    {
+        font-size: 150%;
+        font-weight: bold;
+
+        position: relative;
+        top: 2px;
+
+        display: inline-block;
+
+        margin: 2px 0;
+    }
 }
 
 
-.content-wrapper{
-	background-color: #f7f7f7;
-	-webkit-box-shadow: 2px 0 2px 0 rgba(0,0,0,0.1);
-	box-shadow: 2px 0 2px 0 rgba(0,0,0,0.1);
+.topic
+{
+    margin-bottom: 0;
+    h4
+    {
+        font-weight: bold;
+
+        margin-top: 0;
+    }
+    .col-xs-2
+    {
+        margin-top: 4px;
+    }
+}
+.create-btn
+{
+    font-weight: bold;
+    span
+    {
+        position: relative;
+        top: 2px;
+
+        padding-right: 5px;
+    }
+}
+.topic-line
+{
+    margin-top: 13px;
+}
+.pagination
+{
+    margin: 0;
+}
+#sidebar
+{
+    .replies
+    {
+        font-size: 90%;
+        h4
+        {
+            font-size: 120%;
+            font-weight: bold;
+
+            color: #428bca;
+        }
+    }
+}
+.info
+{
+    .name
+    {
+        font-size: 90%;
+
+        position: relative;
+        top: 1px;
+
+        display: inline-block;
+
+        padding: 1px 8px;
+
+        background-color: #f7f8f8;
+    }
+    .date
+    {
+        font-size: 80%;
+
+        display: inline-block;
+
+        margin: 0;
+        padding: 3px 5px;
+
+        border-radius: 3px;
+        background-color: #f7f8f8;
+
+        borderx: 1px solid #eef0f0;
+    }
+    .tag
+    {
+        font-size: 80%;
+
+        display: inline-block;
+
+        margin: 0;
+        padding: 2px 5px;
+
+        border: 1px solid #daeaec;
+        border-radius: 3px;
+        background-color: #eff9fa;
+        &:hover
+        {
+            text-decoration: none;
+
+            background-color: #e4f7f9;
+        }
+        &.yellow
+        {
+            color: #c09f35;
+            border-color: #eceada;
+            background-color: #faf9ef;
+            &:hover
+            {
+                color: darken(#c09f35,5%);
+                background-color: #faf7d7;
+            }
+        }
+        &.red
+        {
+            color: #d3747c;
+            border-color: #fae2e2;
+            background-color: #fdf4f4;
+            &:hover
+            {
+                color: #c03540;
+                background-color: #ffecec;
+            }
+        }
+        &.orange
+        {
+            color: #dd9450;
+            border-color: #f5ede4;
+            background-color: #fff8f0;
+            &:hover
+            {
+                color: #c03540;
+                background-color: #fff4e7;
+            }
+        }
+    }
+}
+
+.thread
+{
+    padding: 20px;
+
+    border: 1px solid #eee;
+    border-radius: 5px;
+    background-color: #f9fcfe;
+}
+.reply,
+.box
+{
+    margin: 30px 0;
+    padding: 20px;
+
+    border: 1px solid #eee;
+    border-radius: 5px;
+}
+.box
+{
+    margin-top: 0;
+}
+.post
+{
+    padding: 0 30px;
+
+    border-bottom: 5px #bdc3c7 solid;
+}
+.vote
+{
+    font-size: 120%;
+    font-weight: bold;
+    line-height: 22px;
+
+    padding: 0 7px;
+}
+.current-score
+{
+    font-size: 180%;
+    line-height: 33px;
+
+    position: relative;
+    top: 3px;
+
+    display: inline-block;
+
+    padding: 3px 8px;
+}
+.inner-reply-btn,
+.reply-btn
+{
+    margin-right: 5px;
+    padding: 2px 10px 3px 10px;
+}
+.reply-form,
+.topic-reply
+{
+    margin-top: 20px;
+    padding: 10px;
+
+    border-radius: 5px;
+    background-color: #c7e5ec;
+    h5
+    {
+        font-size: 1.3em;
+        font-weight: normal;
+    }
+}
+.topic-reply
+{
+    background-color: #cfcfcf;
+}
+.reply-form-original
+{
+    display: none;
+}
+
+
+.content-wrapper
+{
+    background-color: #f7f7f7;
+    -webkit-box-shadow: 2px 0 2px 0 rgba(0,0,0,.1);
+            box-shadow: 2px 0 2px 0 rgba(0,0,0,.1);
 }
 .content-wrapper,
-.sidebar-wrapper{
-	padding: 30px;
+.sidebar-wrapper
+{
+    padding: 30px;
 }
-.sidebar-wrapper{
-	padding-top: 20px;
-	.box{
-		background-color: #f7f7f7;
-		padding: 20px;
-		border-radius: 0;
-		color: #555;
-		&.small-text{
-			font-size: 0.9em;
-		}
-		li{
-			padding: 3px 0;
-		}
-		ul,ol{
-			margin-left: 0;
-			padding-left: 25px;
-		}
-	}
+.sidebar-wrapper
+{
+    padding-top: 20px;
+    .box
+    {
+        padding: 20px;
+
+        color: #555;
+        border-radius: 0;
+        background-color: #f7f7f7;
+        &.small-text
+        {
+            font-size: .9em;
+        }
+        li
+        {
+            padding: 3px 0;
+        }
+        ul,
+        ol
+        {
+            margin-left: 0;
+            padding-left: 25px;
+        }
+    }
 }
-.content-white{
-	background-color: #fff;
+.content-white
+{
+    background-color: #fff;
 }
-.content-grey{
-	background-color: #f7f7f7!important;
+.content-grey
+{
+    background-color: #f7f7f7!important;
 }
-.wrapper{
-	background-color: #ececec;
-	margin-left: 0;
-	margin-right: 0;
+.wrapper
+{
+    margin-right: 0;
+    margin-left: 0;
+
+    background-color: #ececec;
 }
-h1.line{
-	margin-top: 0;
-	padding-bottom: 30px;
-	margin-bottom: 30px;
-	border-bottom: 1px solid #eee;
+h1.line
+{
+    margin-top: 0;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+
+    border-bottom: 1px solid #eee;
 }
-.content-wrapper{
-	min-height: 710px;
+.content-wrapper
+{
+    min-height: 710px;
 }
-.help-text{
-	color: #777;
-	font-size: 0.75em;
-	padding-top: 10px;
+.help-text
+{
+    font-size: .75em;
+
+    padding-top: 10px;
+
+    color: #777;
 }
-.alert{
-	margin-bottom: 30px;
+.alert
+{
+    margin-bottom: 30px;
 }
-.item{
-	background-color: #fff;
-	margin-bottom: 30px;
-	padding: 15px 0;
-	margin-left: 0;
-	margin-right: 0;
+.item
+{
+    margin-right: 0;
+    margin-bottom: 30px;
+    margin-left: 0;
+    padding: 15px 0;
+
+    background-color: #fff;
 }
-.input-group{
-	.btn{
-		line-height: 15px;
-		margin-top: 2px;
-		padding-top: 9px;
-		padding-bottom: 8px;
-	}
+.input-group
+{
+    .btn
+    {
+        line-height: 15px;
+
+        margin-top: 2px;
+        padding-top: 9px;
+        padding-bottom: 8px;
+    }
 }
-.search,.ad,.box,.list-group{
-	margin-bottom: 30px;
+.search,
+.ad,
+.box,
+.list-group
+{
+    margin-bottom: 30px;
 }
-.item-header{
-	p{
-		margin: 25px 0;
-		line-height: 1.7em;
-	}
+.item-header
+{
+    p
+    {
+        line-height: 1.7em;
+
+        margin: 25px 0;
+    }
 }
-.item-info{
-	th{
-		text-align: right;
-	}
+.item-info
+{
+    th
+    {
+        text-align: right;
+    }
 }
-.content-grey{
-	background-color: #EDEFFD;
-	border-radius: 1px;
-	padding: 20px;
-	border: 1px solid #efefef;
+.content-grey
+{
+    padding: 20px;
+
+    border: 1px solid #efefef;
+    border-radius: 1px;
+    background-color: #edeffd;
 }
-.dl-horizontal{
-	dt,dd{
-		font-size: 	1.1em;
-		padding-top: 2px;
-		padding-bottom: 2px;
-	}
+.dl-horizontal
+{
+    dt,
+    dd
+    {
+        font-size: 1.1em;
+
+        padding-top: 2px;
+        padding-bottom: 2px;
+    }
 }
-.container{
-	padding-top: 30px;
+.container
+{
+    padding-top: 30px;
 }
-.thumb-up{
-	color: green;
-	font-size: 50px;
+.thumb-up
+{
+    font-size: 50px;
+
+    color: green;
 }
-.thumb-down{
-	color: red;
-	font-size: 50px;
+.thumb-down
+{
+    font-size: 50px;
+
+    color: red;
 }
-.context p{
-	line-height: 1.7em;
+.context p
+{
+    line-height: 1.7em;
 }
-.pending{
-	color: rgb(252, 150, 16);
-	font-size: 50px;
+.pending
+{
+    font-size: 50px;
+
+    color: rgb(252, 150, 16);
 }
-.required{
-	color: red;
+.required
+{
+    color: red;
 }
