--- a/public/css/style.less
+++ b/public/css/style.less
@@ -485,11 +485,14 @@ h1.line
     dt,
     dd
     {
-        font-size: 1.1em;
+        font-size: 1em;
 
         padding-top: 2px;
         padding-bottom: 2px;
     }
+}
+.content{
+    font-family: sans-serif;
 }
 .container
 {
