--- a/public/css/style.less
+++ b/public/css/style.less
@@ -402,7 +402,7 @@ body
 {
     margin-right: 0;
     margin-left: 0;
-
+    width: 100%;
     background-color: #ececec;
 }
 h1.line
@@ -591,20 +591,20 @@ h1{
         max-width: 400px;
     }
 }
-@media (min-width: 992px) {
-    .wrapper{
-        display: table;
-        .content-wrapper,
-        .sidebar-wrapper{
-            vertical-align: top;
-            display: table-cell;
-            float: none;
-        }
-        .content-wrapper{
-            width: 75%;
-        }
-        .sidebar-wrapper{
-            width: 25%;
-        }
-    }
-}
+// @media (min-width: 992px) {
+//     .wrapper{
+//         display: table;
+//         .content-wrapper,
+//         .sidebar-wrapper{
+//             vertical-align: top;
+//             display: table-cell;
+//             float: none;
+//         }
+//         .content-wrapper{
+//             width: 75%;
+//         }
+//         .sidebar-wrapper{
+//             width: 25%;
+//         }
+//     }
+// }
