Code inspection, refactoring controllers (for create and update queries)

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -566,6 +566,11 @@ h1.line
         color: #666;
     }
 }
+.item-header h2{
+    .thaisans;
+    font-size: 2.5em;
+    color: #555;
+}
 h1{
     .thaisans;
     font-size: 3em;
